changed the mistake of image name

--- a/public/stylesheets/card1.css
+++ b/public/stylesheets/card1.css
@@ -152,10 +152,10 @@
     max-height: 24%;
     overflow: hidden;
 }
-.card__title,.card__content p {
+/*.card__title,.card__content p {
     margin: 0;
 }
-
+*/
 
   
   /*.card1:hover{
