--- a/public/stylesheets/ui_change.css
+++ b/public/stylesheets/ui_change.css
@@ -9,7 +9,7 @@ body{
 .home{
 	width: 100vw;
 	height: 100vh;
-	background-image:url(ishaan.jpg);
+	background-image:url(background.jpg);
     
     background-repeat: no-repeat;
     background-size: cover;
